--- a/stylesheet.css
+++ b/stylesheet.css
@@ -726,6 +726,7 @@ input:checked + .slider:before {
 	.tab{color: black; page-break-inside: avoid; !important;}
 	.tab60{color: black; font-size: clamp(12px, 2.5vw, 2.5vw);}
 	.tab80{color: black; font-size: clamp(11pt, 2.0vw, 2.0vw);}
+	.tab115{color: black; font-size: 1.4vw;}
 	.TurquoiseNavBar{display: none !important;}
 
 }
